<resources>
    <!--Test Strings-->
    <string name="hello_world">Hello World!</string>

    <string name="app_name">Folio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search your Folio</string>

    <!--Main Activity Strings-->
    <string name="movie_view">Movies</string>
    <string name="wish_list_view">Wish List</string>
    <string name="books_view">Books</string>
    <string name="empty_list">No items added yet.</string>
    <string name="empty_movies">Add some awesome movies!</string>
    <string name="empty_books">Add some fascinating books!</string>


    <!--Nav Drawer Strings-->
    <string name="nav_description">Find and Add to your collection!</string>
    <string name="search_retailers_nav">Search Retailers</string>
    <string name="select_movies_owned">Movies</string>
    <string name="select_books">Books</string>
    <string name="select_wish_list">Wish List</string>
    <string name="sort_label">Sort By</string>
    <string name="sort_date_added_new">Date Added Newest</string>
    <string name="sort_date_added_old">Date Added Oldest</string>
    <string name="sort_title_AZ">Title A->Z</string>
    <string name="sort_title_ZA">Title Z->A</string>
    <string name="admin_nav">Administration</string>
    <string name="select_restore_backup">Restore Database</string>
    <string name="select_settings_activity">Settings and Backup</string>


    <!-- Barcode Capture Strings-->
    <string name="barcode_activity_label">Read Barcode</string>
    <string name="ok">OK</string>
    <string name="alert_dialoge_label">Barcode Scanner</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This Barcode scanner cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Barcode dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="tap_directions">Tap to capture. Pinch/Stretch to zoom</string>

    <!-- Error Message Strings-->
    <string name="no_internet">No Internet Connection.</string>
    <string name="empty_database_list">No Information Available.</string>

    <!-- AddNew Strings-->
    <string name="title_add_new">Add</string>
    <string name="scan_button">scan</string>
    <string name="submit_button">submit</string>
    <string name="input_hint">Enter UPC Digits.</string>
    <string name="store_hint">\u0020\u0020Enter location here: </string>
    <string name="notes_hint">\u0020\u0020Enter Notes here: </string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="wish_list_button">Add to Wish List</string>
    <string name="itemSaved">\u0020Saved to Folio.</string>

    <!-- AddNew EditText hint strings-->
    <string name="NoTitle">Enter Title!</string>
    <string name="NoByline">Enter the byline.</string>
    <string name="NoAuthor">Enter some author.</string>
    <string name="NoDate">Enter release year Ex: 2012</string>
    <string name="NoPublisher">Enter publisher.</string>
    <string name="NoFormats">Enter formats Ex:DVD - Blu-ray</string>
    <string name="NoPages">Enter pages EX: 50 pgs.</string>
    <string name="NoRatingRuntime">Enter Rating/Runtime</string>
    <string name="NoOverview"> Type overview here: </string>
    <string name="NoImage">Type valid URL for image</string>

    <!--Dialog Strings-->
    <string name="updateButton">Update</string>
    <string name="cancelButton">Cancel</string>

    <!--Rating and Runtime Dialog Strings-->
    <string name="ratingRuntimeDialogTitle">Set Rating and Runtime</string>
    <string name="ratingRuntimeDialogMessage">Enter the Rating and the Runtime</string>
    <string name="EnterRuntime">Enter Runtime in Min Ex: 110</string>
    <string name="EnterRating">Enter MPAA rating Ex: PG-13</string>
    <string name="RatingInputError">Please Enter a Valid Rating Ex: PG-13</string>

    <!--Formats Dialog Strings -->
    <string name="formatDialogTitle">Set Formats</string>
    <string-array name="formats">
        <item>@string/blu_ray</item>
        <item>@string/blu_ray_3d</item>
        <item>@string/dvd</item>
        <item>@string/digital_copy</item>
        <item>@string/digital_hd</item>
        <item>@string/k4_ultra_hd</item>
    </string-array>
    <string name="blu_ray" translatable="false">Blu-ray</string>
    <string name="blu_ray_3d" translatable="false">Blu-ray 3D</string>
    <string name="dvd" translatable="false">DVD</string>
    <string name="digital_copy" translatable="false">Digital Copy</string>
    <string name="digital_hd" translatable="false">Digital HD</string>
    <string name="k4_ultra_hd" translatable="false">4K Ultra HD</string>

    <!--DetailActivity/Fragment Strings-->
    <string name="title_activity_detail">Details</string>
    <string name="title_movie_detail">Movie Details</string>
    <string name="title_book_detail">Book Details</string>
    <string name="overview"><b>Overview:</b> \n\n %1$s</string>
    <string name="rating_runtime">%1$s %2$s</string>
    <string name="delete_button">Delete</string>
    <string name="search_retail_button">Search Retailers</string>
    <string name="wish_List_label">Added to Wish List</string>
    <string name="placeholder_share">The Folio APP is Awesome!</string>
    <string name="detail_movie_desc">%1$s %2$s released %3$s rated %4$s UPC: %5$s</string>
    <string name="detail_book_desc">%1$s by %2$s published %3$s ISBN: %4$s</string>
    <string name="detailItemRemoved">Item removed from Folio.</string>
    <string name="detailItemUpdated">Updates saved to Folio.</string>

    <!--Search Retailers Activity-->
    <string name="title_search_retailers">Search Retailers</string>
    <string name="button_amazon">Search Amazon</string>
    <string name="button_target">Search Target</string>
    <string name="button_walmart">Search Walmart</string>
    <string name="button_ebay">Search eBay</string>
    <string name="button_besy_buy">Search Best Buy</string>
    <string name="button_toysrus">Search Toys R\' Us</string>
    <string name="upc_input_label">\u0020 UPC :\u0020</string>
    <string name="title_input_label">\u0020 Title :\u0020\u0020</string>
    <string name="title_hint">Search by Title</string>
    <string name="action_share">Share Last Search</string>

    <!--Search Activity Strings -->
    <string name="title_search_activity">Search Folio</string>
    <string name="search_is_empty">Sorry, we couldn\'t find anything.</string>

    <!--Settings Activity Strings-->
    <string name="settings_title">Settings</string>
    <string name="title_default_view">Default View Settings</string>
    <string name="title_backup_prefs">Backup Settings</string>

    <string name="pref_dialog_view_type_lable">Choose the default view:</string>
    <string name="pref_view_type_label">Default View:</string>
    <string name="pref_label_view_movies">Movies</string>
    <string name="pref_label_view_books">Books</string>
    <string name="pref_label_view_wishlist">Wish List</string>
    <string name="pref_label_view_cd">CD Albums</string>
    <string name="pref_view_movies" translatable="false">movie</string>
    <string name="pref_view_books" translatable="false">books</string>
    <string name="pref_view_wishlist" translatable="false">wish</string>
    <string name="pref_view_cd_albums" translatable="false">albums</string>

    <string name="pref_dialog_sort_by_label">Choose how to sort:</string>
    <string name="pref_sort_by_label">Sort By:</string>
    <string name="pref_label_sort_by_title">Title</string>
    <string name="pref_label_sort_by_add_date">Date Added</string>
    <string name="pref_label_sort_by_release_date">Release Date</string>
    <string name="pref_sort_by_title" translatable="false">TITLE</string>
    <string name="pref_sort_by_add_date" translatable="false">ADD_DATE</string>
    <string name="pref_sort_by_release_date" translatable="false">DATE</string>

    <string name="pref_dialog_sort_order_label">Choose sort order:</string>
    <string name="pref_sort_order_label">Sort Order:</string>
    <string name="pref_label_sort_order_asc">Ascending</string>
    <string name="pref_label_sort_order_dsc">Descending</string>
    <string name="pref_sort_order_asc" translatable="false">ASC</string>
    <string name="pref_sort_order_dsc" translatable="false">DESC</string>

    <string name="pref_local_backup_label">Backup Data to Phone</string>
    <string name="pref_load_local_backup">Restore Data from Phone</string>
    <string name="pref_backup_summary">Touch to restore data from phone storage</string>
    <string name="pref_backup_switch_summary">Turn on to backup to local storage</string>

    <!--Preference Key Strings-->
    <string name="main_view_key" translatable="false">MAIN_VIEW_TYPE</string>
    <string name="sort_order_key" translatable="false">SORT_ORDER</string>
    <string name="sort_type_key" translatable="false">SORT_TYPE</string>
    <string name="local_backup_switch_key" translatable="false">LOCAL_BACKUP</string>
    <string name="local_restore_backup_init_key" translatable="false">RESTORE_LOCAL</string>


    <!--widget strings-->
    <string name="title_widget_detail">Folio Details</string>
    <string name="widget_configure_dialog_label">View Settings:</string>
    <string name="widget_config_view_type_label">Choose default view: </string>
    <string name="widget_config_sort_type_label">Choose Sort Type: </string>
    <string name="widget_config_sort_order_label">Choose Sort Order: </string>
    <string name="widget_config_save">Save</string>
    <string name="widget_config_cancel">Cancel</string>

    <!-- A11y Strings-->
    <string name="wish_list_checkbox_desc">Check this to add to wish list</string>
    <string name="barcode_scan_button">scan barcode button</string>
    <string name="save_button_desc">save movie button</string>
    <string name="cancel_button_desc">cancel button</string>
    <string name="movie_detail_view_description">%1$s %2$s released %3$s rated %4$s</string>
    <string name="book_detail_view_description">%1$s by %2$s published in %3$s</string>
    <string name="poster_description">%1$s Movie art</string>
    <string name="barcode_description">Barcode %1$s</string>
    <string name="trailer_play_description">Play Trailer number %1$s</string>

    <!--Test ad id-->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <!--Ad Ids-->
    <string name="adAppId" translatable="false">ca-app-pub-8372524945349378~3438927048</string>
    <string name="mainActivityAdId" translatable="false">ca-app-pub-8372524945349378/4915660248</string>
    <string name="addNewActivityAdId" translatable="false">ca-app-pub-8372524945349378/5973591045</string>
    <string name="retailSearchActivityAdId" translatable="false">ca-app-pub-8372524945349378/7450324241</string>

    <!--Test Strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_widget_configure">WidgetConfigureActivity</string>
</resources>
