<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search_retail"
            android:icon="@drawable/ic_action_search"
            android:title="@string/search_retailers_nav"/>
        <item
            android:id="@+id/nav_all_movies"
            android:icon="@drawable/ic_filmstrip_black"
            android:title="@string/select_movies_owned" />
        <item
            android:id="@+id/nav_all_books"
            android:icon="@drawable/ic_book_open_variant_black"
            android:title="@string/select_books" />
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_bookmark_plus_outline_black"
            android:title="@string/select_wish_list" />
    </group>


    <item android:title="@string/sort_label">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_date_add_desc"
                    android:icon="@drawable/ic_arrow_down"
                    android:title="@string/sort_date_added_new" />
                <item
                    android:id="@+id/nav_date_add_asc"
                    android:icon="@drawable/ic_arrow_up"
                    android:title="@string/sort_date_added_old" />
                <item
                    android:id="@+id/nav_title_asc"
                    android:icon="@drawable/ic_arrow_up"
                    android:title="@string/sort_title_AZ" />
                <item
                    android:id="@+id/nav_title_desc"
                    android:icon="@drawable/ic_arrow_down"
                    android:title="@string/sort_title_ZA" />

            </group>
        </menu>
    </item>

    <item android:title="@string/admin_nav">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/select_settings_activity" />
        </menu>
    </item>


</menu>
