<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="@dimen/action_bar_default_height_material"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/colorStarkWhite"
        android:text="@string/widget_configure_dialog_label"
        android:textAppearance="?android:textAppearanceMedium"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/widget_config_view_type_label"
        android:paddingStart="@dimen/spinner_padding"
        android:paddingLeft="@dimen/spinner_padding"
        android:paddingTop="@dimen/spinner_padding"
        android:paddingBottom="@dimen/spinner_padding"/>
    <Spinner
        android:id="@+id/widget_view_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spinner_padding"
        android:paddingBottom="@dimen/spinner_padding"
        android:entries="@array/pref_view_type_options"
        android:prompt="@string/pref_dialog_view_type_lable"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/widget_config_sort_type_label"
        android:paddingStart="@dimen/spinner_padding"
        android:paddingLeft="@dimen/spinner_padding"
        android:paddingTop="@dimen/spinner_padding"
        android:paddingBottom="@dimen/spinner_padding"/>
    <Spinner
        android:id="@+id/widget_sort_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spinner_padding"
        android:paddingBottom="@dimen/spinner_padding"
        android:entries="@array/pref_sort_type_options"
        android:prompt="@string/pref_sort_by_label"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/widget_config_sort_order_label"
        android:paddingStart="@dimen/spinner_padding"
        android:paddingLeft="@dimen/spinner_padding"
        android:paddingTop="@dimen/spinner_padding"
        android:paddingBottom="@dimen/spinner_padding"/>
    <Spinner
        android:id="@+id/widget_sort_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spinner_padding"
        android:paddingBottom="@dimen/spinner_padding"
        android:entries="@array/pref_sort_order_options"
        android:prompt="@string/pref_sort_order_label"/>

</LinearLayout>