<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_retailer_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/retailerAdView"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryDark"
        android:animationCache="true"
        tools:context="com.enrandomlabs.jasensanders.v1.folio.RetailerSearchActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/error"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/upc_input_label"
                    android:textColor="@color/colorStarkWhite"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/upc_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:minEms="@integer/min_upc_input_width"
                    android:maxLines="@integer/store_input_max_lines"
                    android:inputType="number"
                    android:textColor="@color/colorStarkWhite"
                    android:hint="@string/input_hint"
                    android:textColorHint="@color/colorStarkWhite"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/scan_button_height"
                    android:layout_weight="2"
                    android:text="@string/scan_button"
                    android:onClick="launchBarcodeScanner"
                    android:drawablePadding="@dimen/scan_button_drawable_padding"
                    android:drawableLeft="@drawable/barcode_scan"
                    android:drawableStart="@drawable/barcode_scan"
                    android:id="@+id/scan_button"
                    android:focusable="true"
                    android:contentDescription="@string/barcode_scan_button"
                    style="@style/Widget.AppCompat.Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimary">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/title_input_label"
                    android:textColor="@color/colorStarkWhite"
                    android:textSize="20sp"
                    android:gravity="center_vertical"/>
                <EditText
                    android:id="@+id/title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minEms="@integer/min_upc_input_width"
                    android:maxLines="@integer/store_input_max_lines"
                    android:textColor="@color/colorStarkWhite"
                    android:hint="@string/title_hint"
                    android:gravity="center"
                    android:textColorHint="@color/colorStarkWhite"/>
            </LinearLayout>

            <Button
                android:id="@+id/button_amazon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/save_cancel_button_margin"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:drawableStart="@android:drawable/ic_menu_search"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/button_amazon"
                android:background="@color/amazon_orange"
                android:textColor="@color/primary_text"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:typeface="sans"
                android:textAllCaps="false"
                android:onClick="searchAmazon"/>

            <Button
                android:id="@+id/button_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/save_cancel_button_margin"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:drawableStart="@android:drawable/ic_menu_search"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/button_target"
                android:textColor="@color/colorStarkWhite"
                android:background="@color/target_red"
                android:typeface="normal"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:onClick="searchTarget"/>

            <Button
                android:id="@+id/button_walmart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/save_cancel_button_margin"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:drawableStart="@android:drawable/ic_menu_search"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/button_walmart"
                android:textColor="@color/walmart_yellow"
                android:background="@color/walmart_blue"
                android:typeface="sans"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:textStyle="normal|bold"
                android:onClick="searchWalmart"/>

            <Button
                android:id="@+id/button_ebay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/save_cancel_button_margin"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:drawableStart="@android:drawable/ic_menu_search"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/button_ebay"
                android:background="@color/ebay_green"
                android:fontFamily="sans-serif"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:textColor="?attr/actionModeSplitBackground"
                android:onClick="searchEbay"/>

            <Button
                android:id="@+id/button_best_buy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/save_cancel_button_margin"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:drawableStart="@android:drawable/ic_menu_search"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/button_besy_buy"
                android:background="@color/best_buy_blue"
                android:fontFamily="sans-serif"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:textColor="@color/walmart_yellow"
                android:onClick="searchBestBuy"/>

            <Button
                android:id="@+id/button_toysrus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/save_cancel_button_margin"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:drawableStart="@android:drawable/ic_menu_search"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/button_toysrus"
                android:background="@color/toysrus_blue"
                android:fontFamily="sans-serif"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:textColor="@color/walmart_yellow"
                android:onClick="searchToysRUs"/>
        </LinearLayout>

    </ScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/retailerAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/retailSearchActivityAdId">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>